# tree_species_seg

./: .gitignore  .mypy.ini  .rcfile  Dockerfile  MANIFEST.in  README.md  pyproject.toml
.github/: code-quality.yml
.github/workflows/: code-quality.yml
configs/: submission.yaml
scripts/: inference.py  train.py
src/tree_species_seg/data/: __init__.py  _segmentation_datamodule.py  _tree_ai_dataset.py
src/tree_species_seg/datasets/: _segmentation_datamodule.py  _tree_ai_dataset.py
src/tree_species_seg/losses/: __init__.py  _combined_loss.py  _cross_entropy_loss.py  _focal_loss.py  _semantic_segmentation_loss.py
src/tree_species_seg/models/: __init__.py  smp_semantic_segmentation_model.py
src/tree_species_seg/pkg_data/: tree_ai_class_remapping.json
